Migrate configure.sh to python for better Windows usability
Summary: Pull Request resolved: https://github.com/facebook/hermes/pull/62

Reviewed By: ridiculousfish

Differential Revision: D16419848

Pulled By: dulinriley

fbshipit-source-id: 5ade6a8dd8e8cf90adff9a4c7009c2506605abb6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,6 +126,8 @@ endif()
 #
 # cmake -G Ninja -DLLVM_BUILD_DIR=$XXX -DLLVM_SRC_DIR=$YYY
 #
+file(TO_CMAKE_PATH "${LLVM_BUILD_DIR}" LLVM_BUILD_DIR)
+file(TO_CMAKE_PATH "${LLVM_SRC_DIR}" LLVM_SRC_DIR)
 list(APPEND CMAKE_MODULE_PATH "${LLVM_BUILD_DIR}/lib/cmake/llvm/")
 
 # Enable debug mode by default
