Support versions down to android-16 (fixes #42)
Summary:
This change sets the minSdkVersion to 16. Make sure to
re-crosscompile LLVM as well as hermes itself. Confirmed
running in an emulator with JellyBean API Level 16.

Reviewed By: dulinriley

Differential Revision: D16473377

fbshipit-source-id: 99a1f10386599c187a964d47c2ab97cbf5cf21aa

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,6 +36,7 @@ android {
   compileSdkVersion = 28
 
   defaultConfig {
+    minSdkVersion = 16
     externalNativeBuild {
       cmake {
         arguments "-DHERMES_IS_ANDROID=True"
