--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           name: Build LLVM
           command: |
             cd "$HERMES_WS_DIR"
-            hermes/utils/build_llvm.py --cross-compile-only llvm llvm_build
+            hermes/utils/build/build_llvm.py --cross-compile-only llvm llvm_build
       - run:
           name: Crosscompile LLVM
           command: |
@@ -85,12 +85,12 @@ jobs:
           name: Build LLVM
           command: |
             cd "$HERMES_WS_DIR"
-            hermes/utils/build_llvm.py --distribute llvm llvm_build_release
+            hermes/utils/build/build_llvm.py --distribute llvm llvm_build
       - run:
           name: Build Hermes for Linux
           command: |
             cd "$HERMES_WS_DIR"
-            STATIC_LINK=1 DISTRIBUTE=1 hermes/utils/configure.sh
+            hermes/utils/build/configure.py --static-link --distribute
             cd build_release
             ninja github-cli-release
       - run:
