Add HERMESVM_TIMELIMIT build config
Summary: Enable HERMESVM_TIMELIMIT from buck and cmake. Also, enable `-fexceptions` build flag when it is defined.

Reviewed By: davedets

Differential Revision: D16424434

fbshipit-source-id: 10bef2d68a265f65ff075009c25d0d098f51ca86

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,9 @@ set(HERMESVM_PROFILER_JSFUNCTION OFF CACHE BOOL
 set(HERMESVM_PROFILER_NATIVECALL OFF CACHE BOOL
   "Enable native call profiling in hermes VM")
 
+set(HERMESVM_TIMELIMIT OFF CACHE BOOL
+  "Enable time limit in hermes VM")
+
 set(HERMESVM_INDIRECT_THREADING ${DEFAULT_INTERPRETER_THREADING} CACHE BOOL
   "Enable the indirect threaded interpreter")
 
