Add unit test for timelimit
Reviewed By: dulinriley

Differential Revision: D16502630

fbshipit-source-id: 924d08e8d3f2765c238c3200a8d17213a969847d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -484,6 +484,7 @@ set(HERMES_LIT_TEST_PARAMS
   hbc-deltaprep=${HERMES_BINARY_DIR}/bin/hbc-deltaprep
   build_mode=${HERMES_ASSUMED_BUILD_MODE_IN_LIT_TEST}
   exception_on_oom_enabled=${HERMESVM_EXCEPTION_ON_OOM}
+  timelimit_enabled=${HERMESVM_TIMELIMIT}
   )
 
 set(LLVM_LIT_ARGS "-sv")
