--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -31,6 +31,8 @@ if isTrue(lit_config.params["jit_disassembler_enabled"]):
   config.available_features.add("jit_dis")
 if isTrue(lit_config.params["exception_on_oom_enabled"]):
   config.available_features.add("exception_on_oom")
+if isTrue(lit_config.params["timelimit_enabled"]):
+  config.available_features.add("timelimit")
 
 if lit_config.params["build_mode"] != "opt":
   config.available_features.add("debug_options")
