Avoid VM dependency on Instrumentation
Summary: Avoid depending on the Instrumentation library in every VM build. The RuntimeStats class is the only thing actually used by every VM, so move RuntimeStats up into the VM directory. Although the unused code in Instrumentation was already being stripped out in most builds, this has the benefit of making those builds more robust against any build/portability issues in the Instrumentation library.

Reviewed By: jbower-fb

Differential Revision: D16563725

fbshipit-source-id: a6b03138fd19b39736aee4ff65878aa4d6b458f5

--- a/lib/VM/CMakeLists.txt
+++ b/lib/VM/CMakeLists.txt
@@ -41,6 +41,7 @@ set(source_files
   Profiler.cpp
   Runtime.cpp Runtime-profilers.cpp
   RuntimeModule.cpp
+  RuntimeStats.cpp
   Profiler/ChromeTraceSerializerPosix.cpp
   Profiler/SamplingProfilerWindows.cpp
   Profiler/SamplingProfilerPosix.cpp
@@ -178,7 +179,6 @@ endif()
 add_llvm_library(hermesVMRuntime STATIC ${source_files}
     LINK_LIBS
     hermesInst
-    hermesInstrumentation
     hermesSupport
     hermesParser
     hermesPlatform
