Implement getFunctionName to map native function pointer to its string name.
Summary:
Implement std::string getFunctionName(void *) that can return a
human-readable string name for a native function. This can help HeapSnapshot to
display NativeFunction and NativeConstructor.

Add unittest.

Reviewed By: dulinriley

Differential Revision: D16567708

fbshipit-source-id: 055fac65edba175fc00bc37013df350d8d484708

--- a/lib/VM/CMakeLists.txt
+++ b/lib/VM/CMakeLists.txt
@@ -31,6 +31,7 @@ set(source_files
   JSObject.cpp
   JSRegExp.cpp
   JSMapImpl.cpp
+  JSNativeFunctions.cpp
   JSTypedArray.cpp
   JSWeakMapImpl.cpp
   LimitedStorageProvider.cpp
