Use cmake --build instead of a separate build command (#66)
Summary:
Issue: https://github.com/facebook/hermes/issues/54

CMake already knows the correct build command based on the generator,
and can apply a consistent set of flags for things like parallelism.
CMake also presents a `--target` flag that makes it easy to select only one target,
so `--cross-compile-only` becomes unnecessary.
Pull Request resolved: https://github.com/facebook/hermes/pull/66

Reviewed By: willholen

Differential Revision: D16519117

Pulled By: dulinriley

fbshipit-source-id: ade342501b95f748f7c29d7c2a3b647f02fce104

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
           name: Build LLVM
           command: |
             cd "$HERMES_WS_DIR"
-            hermes/utils/build/build_llvm.py --cross-compile-only llvm llvm_build
+            hermes/utils/build/build_llvm.py --target llvm-tblgen llvm llvm_build
       - run:
           name: Crosscompile LLVM
           command: |
