Fix warning about project version from CMake
Summary:
Fix this CMake warning:
```
CMake Warning (dev) at utils/benchmark/CMakeLists.txt:3 (project):
  Policy CMP0048 is not set: project() command manages VERSION variables.
  Run "cmake --help-policy CMP0048" for policy details.  Use the cmake_policy
  command to set the policy and suppress this warning.

  The following variable(s) would be set to empty:

    PROJECT_VERSION
    PROJECT_VERSION_MAJOR
    PROJECT_VERSION_MINOR
    PROJECT_VERSION_PATCH
```

Reviewed By: willholen

Differential Revision: D16518276

fbshipit-source-id: 938e8c84605a73e4203fcf607ea44ba2cbaf0f37

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,14 +12,19 @@ else()
   cmake_minimum_required(VERSION 3.6.0)
 endif()
 
-project(Hermes)
+# Set the VERSION variables based on the project command
+cmake_policy(SET CMP0048 NEW)
+
+# This must be consistent with the release_version in
+# android/build.gradle and npm/package.json
+project(Hermes
+        VERSION 0.1.1
+        LANGUAGES C CXX)
 
 include(CheckCXXCompilerFlag)
 include(CheckCXXSourceCompiles)
 
-# This must be consistent with the release_version in
-# android/build.gradle and npm/package.json
-set(HERMES_RELEASE_VERSION 0.1.1)
+set(HERMES_RELEASE_VERSION PROJECT_VERSION)
 
 # Project options.
 set(HERMESVM_GCKIND NONCONTIG_GENERATIONAL
