Fix CMake policy CMP0075
Summary:
Fixing this warning by setting the policy explicitly to `NEW`:
```
CMake Warning (dev) at /usr/local/Cellar/cmake/3.15.0/share/cmake/Modules/CheckIncludeFile.cmake:80 (message):
  Policy CMP0075 is not set: Include file check macros honor
  CMAKE_REQUIRED_LIBRARIES.  Run "cmake --help-policy CMP0075" for policy
  details.  Use the cmake_policy command to set the policy and suppress this
  warning.

  CMAKE_REQUIRED_LIBRARIES is set to:

    m

  For compatibility with CMake 3.11 and below this check is ignoring it.
Call Stack (most recent call first):
  cmake/config-ix.cmake:26 (check_include_file)
  CMakeLists.txt:582 (include)
```

Reviewed By: willholen

Differential Revision: D16518341

fbshipit-source-id: bac2ccbf10f7c63c96903b0e91af81def1f01a72

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,14 @@ else()
 endif()
 
 # Set the VERSION variables based on the project command
-cmake_policy(SET CMP0048 NEW)
+if (POLICY CMP0048)
+  cmake_policy(SET CMP0048 NEW)
+endif()
+
+# Include file check macros honor CMAKE_REQUIRED_LIBRARIES.
+if (POLICY CMP0075)
+  cmake_policy(SET CMP0075 NEW)
+endif()
 
 # This must be consistent with the release_version in
 # android/build.gradle and npm/package.json
