Add an automated NPM build job on CircleCI
Summary:
Adds a job that collects build artifacts from each of the platform-specific
jobs, and builds an NPM from them.

Reviewed By: dulinriley

Differential Revision: D16604134

fbshipit-source-id: d39525b7ff3090810f42fbda4b3c02073549837e

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,12 @@ workflows:
       - linux
       - macos
       - windows
+      - npm:
+          requires:
+            - android
+            - linux
+            - macos
+            - windows
 
 jobs:
   android:
@@ -59,8 +65,20 @@ jobs:
           command: |
             cd "$HERMES_WS_DIR"
             cp "build_android/distributions"/hermes-runtime-android-*.tar.gz "output"
+      - run:
+          name: Checksum artifacts
+          command: |
+            cd "$HERMES_WS_DIR/output"
+            for file in *
+            do
+              sha256sum "$file" > "$file.sha256"
+            done
       - store_artifacts:
           path: /tmp/hermes/output/
+      - persist_to_workspace:
+          root: /tmp/hermes/output/
+          paths:
+            - .
 
   linux:
     docker:
@@ -104,8 +122,20 @@ jobs:
           command: |
             cd "$HERMES_WS_DIR"
             cp "build_release/github"/hermes-cli-*.tar.gz "output"
+      - run:
+          name: Checksum artifacts
+          command: |
+            cd "$HERMES_WS_DIR/output"
+            for file in *
+            do
+              sha256sum "$file" > "$file.sha256"
+            done
       - store_artifacts:
           path: /tmp/hermes/output/
+      - persist_to_workspace:
+          root: /tmp/hermes/output/
+          paths:
+            - .
 
   macos:
     macos:
@@ -141,8 +171,20 @@ jobs:
           command: |
             cd "$HERMES_WS_DIR"
             cp "build_release/github"/hermes-cli-*.tar.gz "output"
+      - run:
+          name: Checksum artifacts
+          command: |
+            cd "$HERMES_WS_DIR/output"
+            for file in *
+            do
+              shasum -a 256 "$file" > "$file.sha256"
+            done
       - store_artifacts:
           path: /tmp/hermes/output/
+      - persist_to_workspace:
+          root: /tmp/hermes/output/
+          paths:
+            - .
 
   windows:
     executor:
@@ -227,5 +269,75 @@ jobs:
             Copy-Item -Path "build_release\github\hermes-cli-*.tar.gz" -Destination "output"
             if (-not $?) { throw "Copy failed" }
 
+      - run:
+          name: Checksum artifacts
+          command: |
+            cd $Env:HERMES_WS_DIR\output
+            foreach($file in Get-ChildItem) {
+              $hash = Get-FileHash -Path $file -Algorithm SHA256
+              Write-Output ($hash.Hash + "  " + $file.Name) |
+                  Out-File -Encoding ASCII -FilePath ($file.Name +".sha256")
+            }
+
       - store_artifacts:
           path: c:\tmp\hermes\output
+
+      - persist_to_workspace:
+          root: c:\tmp\hermes\output
+          paths:
+            - .
+
+  npm:
+    docker:
+      - image: ubuntu:19.04
+    environment:
+      - yarn: yarnpkg
+      - TERM: dumb
+    steps:
+      - run:
+          name: Install certificates required to attach workspace
+          command: |
+            apt-get update
+            apt-get install -y ca-certificates
+
+      - attach_workspace:
+          at: /tmp/hermes/input
+
+      - run:
+          name: Install dependencies and set up
+          command: |
+            mkdir -p /tmp/hermes/output
+            apt-get install -y git npm yarnpkg
+
+      - checkout
+
+      - run:
+          name: Build NPM
+          command: |
+            cd npm
+            cp /tmp/hermes/input/* .
+            $yarn install
+            $yarn pack
+
+      - run:
+          name: Copy artifacts
+          command: |
+            cd npm
+            cp hermes-engine-*.tgz /tmp/hermes/output
+
+      - run:
+          name: Checksum artifacts
+          command: |
+            cd /tmp/hermes/output
+            for file in *
+            do
+              sha256sum "$file" > "$file.sha256"
+            done
+
+      - store_artifacts:
+          path: /tmp/hermes/output
+
+      - persist_to_workspace:
+          root: /tmp/hermes/output
+          paths:
+            - .
