Fix unexpanded variable in project version
Summary:
Oops:

    willholen@willholen-mbp ~/intern/build/github $ ls -l
    total 17776
    -rw-r--r--  1 willholen  staff  8600385 Aug  1 13:02 hermes-cli-darwin-vPROJECT_VERSION.tar.gz

Reviewed By: dulinriley

Differential Revision: D16606759

fbshipit-source-id: 5b64c9bc14396ba98dee70a2dd9afb4e5d3bd245

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ project(Hermes
 include(CheckCXXCompilerFlag)
 include(CheckCXXSourceCompiles)
 
-set(HERMES_RELEASE_VERSION PROJECT_VERSION)
+set(HERMES_RELEASE_VERSION ${PROJECT_VERSION})
 
 # Project options.
 set(HERMESVM_GCKIND NONCONTIG_GENERATIONAL
