Fix HBC diff string table reporting and add tests.
Summary:
HBCdiff was not reporting sizes correctly because it had the wrong
headers and the assertion (which is very important) didn't fire in
opt mode.

Make the assertion a `hermes_fatal` and sync the correct headers.

Reviewed By: dulinriley

Differential Revision: D16626414

fbshipit-source-id: 9cca448bf2e8e21c2628f2bdba8f84815b2af823

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -47,4 +47,5 @@ config.substitutions.append(("%hermes", lit_config.params["hermes"]))
 config.substitutions.append(("%hdb", lit_config.params["hdb"]))
 config.substitutions.append(("%hbcdump", lit_config.params["hbcdump"]))
 config.substitutions.append(("%hbc-deltaprep", lit_config.params["hbc_deltaprep"]))
+config.substitutions.append(("%hbc-diff", lit_config.params["hbc_diff"]))
 config.substitutions.append(("%repl", lit_config.params["repl"]))
