Serializer and deserializer API.
Summary:
Serialization and Deserialization (S/D): This commit and the following commits
implements the first stage of S/D, where we are able to S/D th VM immediately
after global object initialization. The whole implementation are broken into
those commits for review purpose. The final commit will have tests that test
S/D end to end.

The basic idea is to S/D a graph of entities and each entity knows how to S/D
itself. Pointer values (GC pointers and native pointers) will need to be
relocated so they can point to the correct address after objects are
reconstructed during deserialization. During serialization, each address will
be givin a relocation id when it is first seen and this relocation id will be
written to the serialized stream. During deserialization each relocation id
will be able to know its new address after the entitie is reconstructed. Note
that we decide to do relocation after S/D an entity (Serializer::endObject and
Deserializer::endObject) instead of before so that it's easier to handle
VariableSizeRuntimeCell.

We distinguish between the following kinds of pointers: NormalPointers,
GCPointers, pointers in HermesValue, and function pointers (used by
NativeFunction and NativeConstructor). This commit handles the first three and
function pointers will be covered in later commits. We also map nullptr to id 0
in both Serializer and Deserializer so that we can deal with nullptr gracefully
during S/D.

This commit implements the serializer/deserializer API. The serialize stream
will have the following sections after finish serialization:

// ========================
// Serialized Data
// ========================
// charBuf_(used to deserilize static char* )
// ========================
// charBufSize(size of charBuf_ in bytes)
// ========================
// char16Buf_(used to deserilize static char16_t* )
// ========================
// char16BufSize(size of char16Buf_ in bytes)
// ========================
// mapSize

charBu

--- a/lib/VM/CMakeLists.txt
+++ b/lib/VM/CMakeLists.txt
@@ -11,6 +11,7 @@ set(source_files
   CellKind.cpp
   CheckHeapWellFormedAcceptor.cpp
   CodeBlock.cpp
+  Deserializer.cpp
   DictPropertyMap.cpp
   Domain.cpp
   GCBase.cpp
@@ -46,6 +47,7 @@ set(source_files
   Profiler/ChromeTraceSerializerPosix.cpp
   Profiler/SamplingProfilerWindows.cpp
   Profiler/SamplingProfilerPosix.cpp
+  Serializer.cpp
   SegmentedArray.cpp
   SerializedLiteralParser.cpp
   SingleObject.cpp
