Wrap Serialize/Deserialize code blocks in #ifdef.
Summary: Move Serialize/Deserialize code blocks in #ifdef sections. Add build mode.

Reviewed By: avp

Differential Revision: D16471743

fbshipit-source-id: e047e1ebed758a9d8e77abbf83a0ea973ab8109a

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -33,6 +33,8 @@ if isTrue(lit_config.params["exception_on_oom_enabled"]):
   config.available_features.add("exception_on_oom")
 if isTrue(lit_config.params["timelimit_enabled"]):
   config.available_features.add("timelimit")
+if isTrue(lit_config.params['serialize_enabled']):
+  config.available_features.add("serializer")
 
 if lit_config.params["build_mode"] != "opt":
   config.available_features.add("debug_options")
