Fix CMake test for hbc-diff.
Summary: title

Reviewed By: dulinriley

Differential Revision: D16670141

fbshipit-source-id: b87f68ed55cc6237e829e871a9f7b4c1e041f716

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -482,6 +482,7 @@ list(APPEND HERMES_TEST_DEPS
   hermes-repl
   hbc-attribute
   hbc-deltaprep
+  hbc-diff
   llvm-config
   )
 
@@ -500,7 +501,7 @@ set(HERMES_LIT_TEST_PARAMS
   hbcdump=${HERMES_BINARY_DIR}/bin/hbcdump
   repl=${HERMES_BINARY_DIR}/bin/hermes-repl
   hbc-deltaprep=${HERMES_BINARY_DIR}/bin/hbc-deltaprep
-  hbc-diff=${HERMES_BINARY_DIR}/bin/hbc-diff
+  hbc_diff=${HERMES_BINARY_DIR}/bin/hbc-diff
   build_mode=${HERMES_ASSUMED_BUILD_MODE_IN_LIT_TEST}
   exception_on_oom_enabled=${HERMESVM_EXCEPTION_ON_OOM}
   timelimit_enabled=${HERMESVM_TIMELIMIT}
