Fix CMake build handling of HERMESVM_ALLOW_COMPRESSED_POINTERS
Summary: When this preprocessor flag was added, we didn't do it properly for the CMake build.  This diff fixes that.

Reviewed By: dulinriley

Differential Revision: D17074603

fbshipit-source-id: 20cd6abb80bb46c87ec4e48eb28b4aad1e60a01b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,6 +204,9 @@ endif()
 if(HERMESVM_INDIRECT_THREADING)
     add_definitions(-DHERMESVM_INDIRECT_THREADING)
 endif()
+if(HERMESVM_ALLOW_COMPRESSED_POINTERS)
+    add_definitions(-DHERMESVM_ALLOW_COMPRESSED_POINTERS)
+endif()
 if(HERMESVM_SANITIZE_HANDLES)
     add_definitions(-DHERMESVM_SANITIZE_HANDLES)
 endif()
